# api/src/routes.js
@@ -2,10 +2,10 @@ const express = require('express');
 const swaggerUi = require('swagger-ui-express');
 const swaggerDocument = require('./swagger.json');
 const {getListUsers,getUserById,createUser,updatePlayer,removeUser,disableUser} = require('./controller/user.controller');
-const {login,logout,authJwt,isSelfUser,onlyAdmin,onlyPlayer,onlyCaptiner,onlyOrganizer,isSelfOrganizer,isSelfCaptiner,isUserExist} = require('./controller/security.controller');
+const {login,logout,authJwt,isSelfUser,onlyAdmin,onlyCaptiner,onlyOrganizer,onlyPlayer,isSelfOrganizer,isSelfCaptiner,isUserExist} = require('./controller/security.controller');
 const {getListMatchs,getMatchById,createMatch,updateMatch,deleteMatch,isMatchExist} = require('./controller/match.controller');
 const {getListLevels,getLevelById,createLevel,updateLevel,deleteLevel,isLevelExist} = require('./controller/level.controller');
-const {getListTeams,getTeamById,createTeam,updateTeam,deleteTeam,isTeamExist} = require('./controller/team.controller');
+const {getListTeams,getTeamById,createTeam,updateTeam,deleteTeam,isTeamExist,joinTeamMember} = require('./controller/team.controller');
 const {getListSports,getSportById,createSport,deleteSport,updateSport,isSportExist} = require('./controller/sport.controller');
 const router = express.Router();
 router.use(express.json());
@@ -51,6 +51,7 @@ router.post('/teams',authJwt,onlyCaptiner,createTeam);
 router.get('/teams/:tid',authJwt,onlyCaptiner,isTeamExist,getTeamById);
 router.put('/teams/:tid',authJwt,onlyCaptiner,isTeamExist,isSelfCaptiner,updateTeam);
 router.delete('/teams/:tid',authJwt,onlyCaptiner,isTeamExist,isSelfCaptiner,deleteTeam);
+router.post('/teams/:tid/join',authJwt,onlyPlayer,isTeamExist,joinTeamMember);
 /**
  * API sports
  */
